--- a/grid布局/index.html
+++ b/grid布局/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>grid布局</title>
-    <link rel="stylesheet" type="text/less" href="../css/01.less">
+    <link rel="stylesheet" type="text/less" href="./css/01.less">
     <style>
 
     </style>
@@ -24,7 +24,7 @@
 
 
 
-    <script src="../js/less.min.js"></script>
+    <script src="./js/less.min.js"></script>
 </body>
 
 </html>
