--- a/mobileInput/index.html
+++ b/mobileInput/index.html
@@ -13,6 +13,8 @@
 <body>
     <div class="text">这里是测试文字</div>
     <div class="pcText">这里是测试文字</div>
+    <div class="android">监听安卓</div>
+    <div class="ios">监听ios</div>
 
     <input type="text" class="input" id="input">
 
