--- a/loginExample/bundle/index.html
+++ b/loginExample/bundle/index.html
@@ -11,7 +11,7 @@
 <div class="header">
     <div class="left">
         <div class="icon">
-            <img src="./src/images/icon.png">
+            <img src="./images/icon.png">
         </div>
         <div class="text">
             网罗天下
@@ -31,11 +31,11 @@
         <div class="title">统一身份认证系统</div>
         <div class="inputLim">
             <div class="input">
-                <img src="./src/images/person.png" alt="">
+                <img src="./images/person.png" alt="">
                 <input type="text" placeholder="统一身份认证账号" autocomplete="off">
             </div>
             <div class="input2">
-                <img src="./src/images/password.png" alt="">
+                <img src="./images/password.png" alt="">
                 <input type="password" placeholder="密码" autocomplete="off">
             </div>
         </div>
