--- a/loginExample/bundle/index.html
+++ b/loginExample/bundle/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="icon" href=".images/icon.png" type="image/x-icon">
     <title>test</title>
 </head>
 
@@ -11,7 +12,7 @@
 <div class="header">
     <div class="left">
         <div class="icon">
-            <img src="./images/icon.png">
+            <img src="./src/images/icon.png">
         </div>
         <div class="text">
             网罗天下
