--- a/loginExample/src/index.html
+++ b/loginExample/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./src/images/icon.png" type="image/x-icon">
+    <link rel="icon" href="/images/icon.png" type="image/x-icon">
     <title>test</title>
     <!--为了减少没有样式的时间,我直接把css编译后写在这-->
     <style>
@@ -389,7 +389,7 @@
 <div class="header">
     <div class="left">
         <div class="icon">
-            <img src="./src/images/icon.png">
+            <img src="/images/icon.png">
         </div>
         <div class="text">
             网罗天下
@@ -409,11 +409,11 @@
         <div class="title">统一身份认证系统</div>
         <div class="inputLim">
             <div class="input">
-                <img src="./src/images/person.png" alt="">
+                <img src="/images/person.png" alt="">
                 <input type="text" placeholder="统一身份认证账号" autocomplete="off">
             </div>
             <div class="input2">
-                <img src="./src/images/password.png" alt="">
+                <img src="/images/password.png" alt="">
                 <input type="password" placeholder="密码" autocomplete="off">
             </div>
         </div>
