--- a/loginExample/src/index.html
+++ b/loginExample/src/index.html
@@ -389,7 +389,7 @@
 <div class="header">
     <div class="left">
         <div class="icon">
-            <img src="/images/icon.png">
+            <img src="./images/icon.png">
         </div>
         <div class="text">
             网罗天下
